testsuite/poke.pkl/postdecr-diag-3.pk
/* { dg-do compile } */

E_generic--; /* { dg-error "invalid operand" } */
